# SimdTTM

./: .gitignore  CMakeLists.txt  LICENSE
bench/: CMakeLists.txt
bench/binary_search/: CMakeLists.txt  binary_search.cpp  do_nothing.cpp
bench/btree/: CMakeLists.txt  btree_set.cpp
include/SimdTTM/: algorithm.h
include/SimdTTM/detail/: btree.h  lower_bound.h  operators.h
include/SimdTTM/detail/simd/: compatibility.h  litesimd_library.h  sse_intrinsics.h  vc_library.h
include/VcAlgo/: algorithm  algorithm.h
include/VcAlgo/detail/: btree.h  lower_bound.h  operators.h
include/VcAlgo/detail/simd/: sse_intrinsics.h
include/VcAlgo/details/: b+tree.h  btree.h  lower_bound.h  operators.h
test/: CMakeLists.txt  btree.cpp
